Revert "ensure nav links are white to prevent bad contrast"
This reverts commit 05b8fd5e27a7a012267b87128b36fd84bd19bd77.

--- a/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
+++ b/app/assets/stylesheets/hera/modules/navigation/_navigation.scss
@@ -28,7 +28,6 @@
 
         .nav-link {
           align-items: center;
-          color: $white;
 
           &.dropdown-toggle::after {
             display: inline-block;
